<resources>
    <string name="server_client_id">135694411826-qvj353ee5232b5jgph44a9flmeetdr5u.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1395073864007325</string>
    <string name="fb_login_protocol_scheme">fb1395073864007325</string>
    <string name="app_name">DZ-NOW</string>
    <string name="welcome">Bienvenue</string>
    <string name="chang_lang">changer la langue</string>
    <string name="welcome_user">Bienvenue, Mlle Fatima !</string>
    <string name="topic">Topics</string>
    <string name="search_title">Trouvez un article</string>
    <string name="title_activity_article_reading">ArticleReadingActivity</string>
    <string name="share">partager vers</string>
    <string name="politics">Politique</string>
    <string name="tech">Techno</string>
    <string name="art">Art</string>
    <string name="science">Science</string>
    <string name="sport">Sport</string>
    <string name="economics">Economie</string>
    <string name="culture">Culture</string>
    <string name="mode">mode</string>
    <string name="dark_mode">Mode Nuit</string>
    <string name="profile">Profile</string>
    <string name="chang_pic">Changer la photo de profile</string>
    <string name="chang_pseu">Changer le pseudo</string>
    <string name="laguages">Langues</string>
    <string name="topics">Thèmes</string>
    <string name="save">Enregistrer</string>
    <string name="share_social">Partager sur</string>
    <string name="share_profile">Partager</string>
    <string name="publish_date" translatable="false">Partagé le</string>
    <string name="param">  paramètres</string>
    <string name="confirmer">Confirmer</string>
    <string name="prendre_photo">Prendre photo</string>
    <string name="choisir_photo">Choisir photo</string>
    <string name="all">Tous</string>
    <string name="home">Accueil</string>
    <string name="saved">Sauvegardes</string>
    <string name="cancel">Annuler</string>
    <string name="social">social</string>
    <string name="actualité">Actualité</string>
    <string name="femme">Pour Elle</string>
    <string name="international">International</string>
    <string name="nat">national</string>
    <string name="health">Santé</string>
    <string name="signer">Ajouter signet</string>
    <string name="sync">Synchroniser</string>
    <string name="myvideos">  Mes vidéos</string>
    <string name="news_papers">News Papers</string>
    <string name="partager_via_sms">partager via SMS</string>
    <string name="partager_via_email">partager via Email</string>
    <string name="myfav">  Mes favoris</string>
</resources>
